# rust_template

./: Cargo.toml  configuration.yaml
src/: lib.rs  main.rs  server.rs
src/config/: app_setting.rs  logging.rs  mod.rs
src/route/: hello.rs
src/service/: hello.rs
