[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
config = "0.14.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-cors = "0.7.0"